--- a/DevIo.AppModelo/Views/Shared/_Layout.cshtml
+++ b/DevIo.AppModelo/Views/Shared/_Layout.cshtml
@@ -1,20 +1,18 @@
 ﻿<html>
-<heaad>
+<head>
     <title>@ViewData["Title"] - Minha App Modelo</title>
-
-    <environment include ="Development">
+    <environment include="Development">
         <link rel="stylesheet" href="~/lib/Bootstrap/css/bootstrap.css" />
         <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
     </environment>
     <environment excuide="Development">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
-              app-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
-              app-fallback--test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-              crossorigin="anonymoys"
-              integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYchqibrV7PBE=" />
+              app-fallback-href="~/lib/bootstrap/css/bootstrap.css"
+              app-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+              crossorigin="anonymous" />
+        @*integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYCHqibrV7PBE="*@
     </environment>
-
-</heaad>
+</head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom mb-3">
@@ -41,10 +39,22 @@
 
         </main>
     </div>
-    <footer class="container">
-        Rodapé
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            Rodapé
+
+        </div>
     </footer>
+    <environment include="Development">
+        <script src="~/lib/jquery/jquery.js"></script>
+        <script src="~/lib/Bootstrap/js/bootstrap.js"></script>
+    </environment>
+    <environment excuide="Development">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+                app-fallback-src="~lib/jquery/jquert.min.js"
+                app-fallback-test-class="window.jQuert && window.jQuery.fn && window.jQuery.fn.modal"
+                crossorigin="anonymous"></script>
+        @*integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYCHqibrV7PBE="*@
+    </environment>
 </body>
-
-
 </html>
