realizado a inclusao do css na folha de estilo extra site.css

--- a/DevIo.AppModelo/Views/Shared/_Layout.cshtml
+++ b/DevIo.AppModelo/Views/Shared/_Layout.cshtml
@@ -54,6 +54,8 @@
                 app-fallback-src="~lib/jquery/jquert.min.js"
                 app-fallback-test-class="window.jQuert && window.jQuery.fn && window.jQuery.fn.modal"
                 crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="~/css/site.css" />
         @*integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYCHqibrV7PBE="*@
     </environment>
 </body>
