realizando testes em outras maneiras de realizar injecao de dependencia

--- a/DevIo.AppModelo/Modulos/Produtos/Views/Cadastro/Index.cshtml
+++ b/DevIo.AppModelo/Modulos/Produtos/Views/Cadastro/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿@using DevIO.UI.Site.Data
-@inject IPedidoRepository PedidoRepository
+@inject IPedidoRepository _pedido
 
-Ola!
-
-@PedidoRepository.ObterPedido().Id
-
+@_pedido.ObterPedido().Id
